[package]
name = "ckb-sdk-types"
version = "0.41.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

ckb-types = "0.40"
ckb-traits = "0.40"
ckb-jsonrpc-types = "0.40"
ckb-hash = "0.40"
ckb-error = "0.40"

[dev-dependencies]
ckb-crypto = { version = "0.40", features = ["secp"] }
